crates/ty_server/tests/e2e/snapshots/e2e__semantic_tokens__multiline_token_client_not_supporting_multiline_tokens.snap
---
source: crates/ty_server/tests/e2e/semantic_tokens.rs
expression: tokens
---
{
  "data": [
    0,
    4,
    11,
    7,
    1,
    0,
    12,
    6,
    2,
    1,
    0,
    8,
    3,
    1,
    0,
    0,
    5,
    6,
    2,
    1,
    0,
    8,
    3,
    1,
    0,
    0,
    8,
    4,
    1,
    0,
    1,
    4,
    51,
    10,
    0,
    1,
    0,
    1,
    10,
    0,
    1,
    0,
    10,
    10,
    0,
    1,
    0,
    37,
    10,
    0,
    1,
    0,
    38,
    10,
    0,
    1,
    0,
    1,
    10,
    0,
    1,
    0,
    13,
    10,
    0,
    1,
    0,
    61,
    10,
    0,
    1,
    0,
    1,
    10,
    0,
    1,
    0,
    7,
    10,
    0
  ]
}
