crates/ty_server/tests/e2e/snapshots/e2e__semantic_tokens__multiline_token_client_supporting_multiline_tokens.snap
---
source: crates/ty_server/tests/e2e/semantic_tokens.rs
expression: tokens
---
{
  "data": [
    0,
    4,
    11,
    7,
    1,
    0,
    12,
    6,
    2,
    1,
    0,
    8,
    3,
    1,
    0,
    0,
    5,
    6,
    2,
    1,
    0,
    8,
    3,
    1,
    0,
    0,
    8,
    4,
    1,
    0,
    1,
    4,
    220,
    10,
    0
  ]
}
